<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".farmer.ApplyPermit"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolBar3"
        android:background="@color/lavender"
        android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <TextView
                    android:text="@string/field_credentials"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/lavender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="@color/lavender"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fieldNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:layout_marginTop="80dp"
                        android:hint="@string/enter_field_number"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="@color/lavender"
                    app:endIconMode="clear_text">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/subLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:hint="@string/enter_your_sub_location"
                        android:inputType="text"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:id="@+id/text_input_area"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="@color/lavender"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:hint="@string/area"
                        android:inputType="text"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:text="@string/crop_details"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/lavender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:endIconMode="clear_text"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="@color/lavender">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/caneAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:hint="@string/cane_age_in_months"
                        android:inputType="numberDecimal"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:text="@string/cane_stage"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/custom_edittext"
                    android:entries="@array/crop_rotation_types"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:endIconMode="clear_text"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="@color/lavender">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/estimatedTonnes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:hint="@string/the_estimated_harvest_in_tonnes"
                        android:inputType="number"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:endIconMode="clear_text"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="@color/lavender">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/acreAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:hint="@string/acreage"
                        android:inputType="numberDecimal"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:text="@string/payment_credentials"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/lavender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:text="@string/bank_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Spinner
                    android:id="@+id/spinnerBankName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/custom_edittext"
                    android:entries="@array/bank_name"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:endIconMode="clear_text"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxStrokeWidth="2dp"
                    app:boxStrokeColor="@color/lavender">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/bankAccountNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:hint="@string/bank_account_number"
                        android:inputType="number"
                        tools:ignore="TouchTargetSizeCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:text="@string/preferred_cane_collection_date"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:minDate="@{T(java.lang.System).currentTimeMillis() + 864000000L}" />


                <ProgressBar
                    android:id="@+id/progressBar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/errorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="16sp"
                    android:visibility="gone" />


                <Button
                    android:id="@+id/btn_apply_permit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/apply_permit"
                    android:textSize="18sp"
                    android:background="@drawable/custom_edittext"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/lavender"
                    tools:ignore="DuplicateSpeakableTextCheck" />



            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>