<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pagebkg"
    android:padding="10dp"
    tools:context=".intro.Register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp">

    <TextView
        android:text="SignUp"
        android:textSize="36sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:textColor="@color/lavender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/lavender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/full_name"

            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="8dp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/lavender">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="8dp"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/text_input_password"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusTopStart="30dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/lavender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="#757575"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="8dp"

            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/lavender">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:drawableLeft="@drawable/ic_baseline_phone_24"
            android:drawablePadding="8dp"
            tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <CheckBox
            android:id="@+id/isFarmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:textSize="16sp"
            android:text="Register as Farmer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <CheckBox
            android:id="@+id/isHarvestingManager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:text="Register as Harvesting Manager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/isFarmer" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="18sp"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/lavender"
        app:layout_constraintTop_toBottomOf="@+id/isHarvestingManager"
        tools:ignore="DuplicateSpeakableTextCheck" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:text="Already have an account?"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginNow"
                android:textSize="16sp"
                android:gravity="start"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/lavender"
                app:layout_constraintTop_toBottomOf="@+id/btn_register"
                android:text="Login"/>

        </LinearLayout>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>